# dorf

./: .gitignore  Cargo.toml  pyproject.toml
notebooks/: experiments.py
src/: benchmarks.rs  lib.rs  ml.rs  stdio.rs  tribles.rs
src/benchmarks/: ann_mnist_784_euclidean.rs  utils.rs
src/benchmarks/utils/: annhdf5.rs
