[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smol"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"

hdf5 = { version = "0.8" }
ndarray = { version = "0.15" }
hnsw_rs = { version = "0.3.0" }
anndists = { version = "0.1.2" }
log = { version = "0.4" }
env_logger = { version = "0.10" }
cpu-time = { version = "1.0" }
rand = { version = "0.8" }

[dev-dependencies]
